recursion.lessons.recursion.koch.Koch.scala.error
Koch:15: error: not enough arguments for method snowFlake: (levels: Int, length: Double)Unit.
Unspecified value parameters levels, length.
snowFlake()
         ^